fix: use an oauth security scheme
