# src/main/java/com/mytiki/l0_index/features/latest/license/LicenseController.java
@@ -29,7 +29,7 @@ public class LicenseController {
     @Operation(operationId = Constants.PROJECT_DASH_PATH +  "-license-list",
             summary = "List Licenses",
             description = "Retrieve a list of compressed licenses matching one or more filters",
-            security = @SecurityRequirement(name = "jwt"))
+            security = @SecurityRequirement(name = "oauth"))
     @RequestMapping(method = RequestMethod.POST)
     public LicenseAORspList list(
             Principal principal,
@@ -43,7 +43,7 @@ public class LicenseController {
     @Operation(operationId = Constants.PROJECT_DASH_PATH +  "-license-get",
             summary = "Get License",
             description = "Returns a complete License Record",
-            security = @SecurityRequirement(name = "jwt"))
+            security = @SecurityRequirement(name = "oauth"))
     @RequestMapping(method = RequestMethod.GET, path = "/{id}")
     public LicenseAORsp get(Principal principal, @PathVariable String id) {
         return service.fetch(id, principal.getName());
